Moved edit button, fixed Canvas spacing
(1) Changed Website title
(2) Changed placeholder values
(3) Moved Edit button
(4) adjusted canvas sizing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,7 +29,7 @@
 {
   background-color: transparent;
   border-color: transparent;
-  border-radius:100px;
+  border-radius: 100px;
   font-size: 50px;
   box-shadow: none;
   line-height: 0px;
@@ -74,9 +74,14 @@
   margin-left: 30vw;
 }
 
-.canvasCards
+.card
 {
   background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid white;
+}
+
+.canvasCards
+{
   border-radius: 30px;
   max-height: 75vh;
 }
@@ -86,11 +91,17 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: center;
   align-content: flex-start;
   align-items: stretch;
   gap: 20px;
   padding-bottom: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container{
+  max-width: 97.5vw;
 }
 
 .cardContent
@@ -101,7 +112,7 @@
   overflow: hidden;
 }
 
-.cardContent:hover > .delListView:hover
+.cardContent:hover > .delListView:hover, .cardContent:hover > .listCtrl:hover
 {
   background-color: var(--layeringWhite);
   border-radius: 15px;
@@ -256,7 +267,6 @@
 
 #formCard
 {
-  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -355,10 +365,10 @@
 
 .listCtrl
 {
-  background-color: var(--semiWhite);
-  border-radius: 20px;
-  color: white;
-  margin-top: 1%;
+  background-color: transparent;
+  color: var(--almostBlack);
+  position: absolute;
+  right: 50px;
 
 }
 
@@ -379,7 +389,7 @@
 }
 
 .listGrid:hover > .btn-group > .schedTaskView, 
-div:hover > .listCtrl, 
+.cardContent:hover > .listCtrl, 
 .cardContent:hover > .delListView
 {
   display: inline-block;
@@ -387,8 +397,7 @@ div:hover > .listCtrl,
 
 }
 
-.listGrid:hover > .btn-group > .schedTaskView:hover, 
-h1:hover > .listCtrl
+.listGrid:hover > .btn-group > .schedTaskView:hover
 {
   color: white;
 
